--- a/ServerSide/Grains/HelloWorld.Grain/docker/Dockerfile
+++ b/ServerSide/Grains/HelloWorld.Grain/docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine:3.10 AS base
 WORKDIR /app_grain
 
-FROM mcr.microsoft.com/dotnet/core/sdk:3.0-alpine AS build
+FROM mcr.microsoft.com/dotnet/core/sdk:2.2-stretch AS build
 WORKDIR /src
 COPY ["ServerSide/Grains/HelloWorld.Grain/HelloWorld.Grain.csproj", "ServerSide/Grains/HelloWorld.Grain/"]
 COPY ["RPC_Share/VisitTracker.ShareInterface/VisitTracker.ShareInterface.csproj", "RPC_Share/VisitTracker.ShareInterface/"]
