--- a/ClientSide/ConsoleClientDemo/ConsoleClientDemo.csproj
+++ b/ClientSide/ConsoleClientDemo/ConsoleClientDemo.csproj
@@ -2,14 +2,20 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="GranDen.Orleans.Client.CommonLib" Version="1.2.4" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.0" />
+    <TrimmerRootAssembly Include="Orleans.Providers.MongoDB" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <PackageReference Include="GranDen.Orleans.Client.CommonLib" Version="1.3.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.2" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.2" />
+    <PackageReference Include="MongoDB.Driver" Version="2.10.2" />
+    <PackageReference Include="Orleans.Providers.MongoDB" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup>
